# orpheus-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  pyproject.toml
scripts/: docker-build-push.sh
src/: inference.py  main.py  server.py  speechpipe.py
