[project]
name = "orpheus-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.0",
    "snac>=1.2.1",
    "psutil>=7.0.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
    "aiohttp>=3.11.16",
]
